--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@prisma/client": "^6.6.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -28,12 +30,15 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/date-fns": "^2.5.3",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
