--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/pdfkit": "^0.13.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -26,14 +28,18 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.488.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "pdf-lib": "^1.17.1",
     "pdfjs": "^2.5.3",
+    "pdfkit": "^0.17.0",
+    "puppeteer": "^24.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
