--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/pdfkit": "^0.13.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +37,7 @@
     "pdfkit": "^0.17.0",
     "puppeteer": "^24.7.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
