--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:socket": "node server.js",
     "build": "next build",
     "start": "next start",
+    "start:socket": "cross-env NODE_ENV=production node server.js",
     "lint": "next lint",
     "seed": "npx ts-node prisma/seed.ts",
     "prisma:seed": "prisma db seed",
-    "standardize-calibration-statuses": "node fix-calibration-statuses.js"
+    "standardize-calibration-statuses": "node fix-calibration-statuses.js",
+    "test:notifications": "node scripts/send-test-notifications.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -41,6 +44,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
@@ -56,6 +61,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "prisma": "^6.6.0",
