perubahan volume 1 masih banyak error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "postman.settings.dotenv-detection-notification-visibility": false,
-    "codium.codeCompletion.enable": false
+    "codium.codeCompletion.enable": true
 }
